--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,13 +4,14 @@ on:
   push:
     branches:
       - master
+      - v0.7-sync
 
 jobs:
 
   test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
       - name: Update local toolchain
         run: |
