--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "x509-path-finder"
-version = "0.7.1"
+version = "0.7.1-sync.2"
 edition = "2021"
 authors = ["Curtis Lee Fulton <curtis@ciphx.com>"]
 repository = "https://github.com/merlincinematic/x509-path-finder"
@@ -18,7 +18,7 @@ bytes = { version = "1" }
 url = { version = "2.4.0" }
 sha2 = { version = "0.10.7" }
 openssl = { version = "0.10.56", features = ["vendored"], optional = true }
-rustls-webpki = { git = "https://github.com/codemonger-io/webpki.git", tag = "v0.101.7-opt-expiry", optional = true }
+rustls-webpki = { git = "https://github.com/codemonger-io/webpki.git", tag = "v0.101.7-ext.0", optional = true }
 x509-cert = { version = "0.2.4", features = ["pem"] }
 der = { version = "0.7.6", features = ["alloc", "derive", "flagset", "oid"] }
 x509-client = { version = "2.0.1", optional = true }
